Bug 1307408 - part1: fix layout issues for small widths in inspector sidebar;r=Honza
MozReview-Commit-ID: 7bF5gsyxXfp

UltraBlame original commit: a38df6f51b67ca3cd2de921dcfbb8cc8d5208973

--- a/devtools/client/themes/inspector.css
+++ b/devtools/client/themes/inspector.css
@@ -101,8 +101,8 @@ height
 100vh
 ;
 }
-.
-devtools
+#
+inspector
 -
 main
 -
@@ -117,6 +117,12 @@ calc
 -
 1px
 )
+;
+min
+-
+width
+:
+125px
 ;
 display
 :
@@ -163,6 +169,14 @@ splitter
 box
 .
 uncontrolled
+#
+inspector
+-
+splitter
+-
+box
+.
+controlled
 {
 min
 -
@@ -175,6 +189,24 @@ min
 width
 :
 50px
+;
+overflow
+-
+x
+:
+hidden
+;
+}
+.
+inspector
+-
+tabpanel
+{
+min
+-
+width
+:
+200px
 ;
 }
 #
@@ -655,12 +687,6 @@ container
 overflow
 :
 hidden
-;
-min
--
-width
-:
-50px
 ;
 position
 :
